# giap_python

./: .coveragerc  .coveralls.yml  .isort.cfg  .travis.yml  README.md  pyproject.toml  run_tests.sh
giap/: __init__.py  core.py  errors.py  meta.py
giap/consumer/: __init__.py  enums.py  factory.py  interface.py
giap/consumer/implementations/: base.py
tests/: conftest.py  test_core.py
tests/consumer/: test_factory.py
tests/consumer/implementations/: test_base.py
