[tool.poetry]
name = "giap"
version = "0.1.0"
description = "Python SDK for Got It Analytics Platform"
authors = []
packages = [
    {include = "giap"}
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pre-commit = "^2.0.1"
coverage = "^5.0.3"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
hypothesis = "^5.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
